ex6/testdata/typechecker/error/NewTest-err.java
class NewTest {
	public static void main(String[] a){
            A x;
            x = 3; //TE
	}
}

class A {}
